--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -25,6 +25,8 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
 
+# Cursor
+source = ~/.config/hypr/conf/cursor.conf
 
 ###################
 ### MY PROGRAMS ###
