--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -283,7 +283,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
 # Example windowrule v1
-# windowrule = float, ^(kitty)$
+windowrule = float, *
 
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
